# poketrader

./: Dockerfile  README.md  compose.yaml  conda_pokemon.yml  pogo_trader.py  pogo_trader_acc2.py  poketrader.py  pyproject.toml  req.txt  run.sh  runner_linux.sh  runner_win.ps1  test.py  trade_selected).sh
.devcontainer/: Dockerfile  devcontainer.json
archive_old/: commands.md  connection.md  poketrader_220624.py  v1_pogo_trader.py
archive_old/very_old/: old_functions.py  pogo_trader_new(pysimple).py  pogo_trader_old(console).py  test.py
funs/: styles.py  ui_automation.py
old/: trade.sh  trade_split.sh
res/: settings_apk-debug.apk
screencaps/: image_test.ipynb
